objects/MFG_Discrete_Partners_Improvement_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Feedback</label>
        <referenceTo>MFG_Discrete_Partners_Internal_Feedback__c</referenceTo>
        <relationshipLabel>Improvement Plans</relationshipLabel>
        <relationshipName>Improvement_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Steps__c</fullName>
        <label>Summary Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Improvement Plans</relationshipLabel>
        <relationshipName>Improvement_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Improvement Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>IP-{00000000}</displayFormat>
        <label>Improvement Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Improvement Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>